# HKIA-simulation-app

./: .gitignore
HKIA-sim/: Cargo.toml
HKIA-sim/src/: main.rs  sim_settings.rs
HKIA-sim/src/components/: aircraft.rs  mod.rs  navigation.rs  passenger.rs  terminal.rs
HKIA-sim/src/plugins/: aircraft.rs  mod.rs  passenger.rs  terminal.rs
HKIA-sim/src/resources/: clock.rs  mod.rs  nav_graph.rs
HKIA-sim/src/ui/: hud.rs
HKIA-sim/src/world/: mod.rs
_airports/: HKIA.toml
