[package]
name = "HKIA-sim"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18.1"

# Enable a small amount of optimization in debug mode to improve Bevy performance
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy) in debug builds,
# but keep our code unoptimized for faster recompilation and easier debugging
[profile.dev.package."*"]
opt-level = 3